// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateMeeting renders correctly when name is empty 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockScreen
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={3}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "flex": 1,
                          }
                        }
                      >
                        <RCTScrollView
                          collapsable={false}
                          handlerTag={4}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          style={
                            {
                              "padding": 16,
                            }
                          }
                          waitFor={
                            [
                              {
                                "current": null,
                              },
                            ]
                          }
                        >
                          <View>
                            <Text
                              style={
                                [
                                  {
                                    "color": "#000",
                                    "fontSize": 20,
                                    "lineHeight": 26,
                                    "marginBottom": 16,
                                    "textAlign": "left",
                                  },
                                  {
                                    "fontWeight": "bold",
                                  },
                                ]
                              }
                            >
                              Name
                            </Text>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <TextInput
                                editable={true}
                                onChangeText={[Function]}
                                placeholder="Global PoP Meeting"
                                placeholderTextColor="#8E8E8E"
                                style={
                                  [
                                    {
                                      "color": "#000",
                                      "fontSize": 20,
                                      "lineHeight": 26,
                                      "marginBottom": 16,
                                      "textAlign": "left",
                                    },
                                    {
                                      "backgroundColor": "#fff",
                                      "borderColor": "#fff",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flex": 1,
                                      "padding": 8,
                                      "width": 50,
                                    },
                                  ]
                                }
                                testID="meeting_name_selector"
                                value=""
                              />
                            </View>
                            <Text
                              style={
                                [
                                  {
                                    "color": "#000",
                                    "fontSize": 20,
                                    "lineHeight": 26,
                                    "marginBottom": 16,
                                    "textAlign": "left",
                                  },
                                  {
                                    "fontWeight": "bold",
                                  },
                                ]
                              }
                            >
                              Location
                            </Text>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <TextInput
                                editable={true}
                                onChangeText={[Function]}
                                placeholder="BC410"
                                placeholderTextColor="#8E8E8E"
                                style={
                                  [
                                    {
                                      "color": "#000",
                                      "fontSize": 20,
                                      "lineHeight": 26,
                                      "marginBottom": 16,
                                      "textAlign": "left",
                                    },
                                    {
                                      "backgroundColor": "#fff",
                                      "borderColor": "#fff",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flex": 1,
                                      "padding": 8,
                                      "width": 50,
                                    },
                                  ]
                                }
                                value=""
                              />
                            </View>
                            <Text
                              style={
                                [
                                  {
                                    "color": "#000",
                                    "fontSize": 20,
                                    "lineHeight": 26,
                                    "marginBottom": 16,
                                    "textAlign": "left",
                                  },
                                  {
                                    "color": "#e74c3c",
                                  },
                                ]
                              }
                            >
                              Name must not be empty.
                            </Text>
                            <Modal
                              hardwareAccelerated={false}
                              transparent={true}
                              visible={false}
                            />
                            <Modal
                              hardwareAccelerated={false}
                              onRequestClose={[Function]}
                              transparent={true}
                              visible={false}
                            />
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#fff",
                              "borderColor": "rgb(216, 216, 216)",
                              "borderTopWidth": 1,
                              "flexDirection": "row",
                              "justifyContent": "space-around",
                              "paddingHorizontal": 16,
                              "paddingVertical": 16,
                            }
                          }
                        >
                          <View
                            accessible={true}
                            collapsable={false}
                            focusable={false}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "opacity": 1,
                              }
                            }
                          >
                            <View
                              style={
                                [
                                  {
                                    "backgroundColor": "#3742fa",
                                    "borderColor": "#3742fa",
                                    "borderRadius": 8,
                                    "borderWidth": 1,
                                    "padding": 8,
                                  },
                                  {
                                    "backgroundColor": "#8E8E8E",
                                    "borderColor": "#8E8E8E",
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#000",
                                      "fontSize": 20,
                                      "lineHeight": 26,
                                      "textAlign": "left",
                                    },
                                    {
                                      "textAlign": "center",
                                    },
                                    {
                                      "color": "#fff",
                                    },
                                  ]
                                }
                              >
                                Create meeting
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`CreateMeeting renders correctly when name is not empty 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockScreen
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "flex": 1,
                          }
                        }
                      >
                        <RCTScrollView
                          collapsable={false}
                          handlerTag={2}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          style={
                            {
                              "padding": 16,
                            }
                          }
                          waitFor={
                            [
                              {
                                "current": null,
                              },
                            ]
                          }
                        >
                          <View>
                            <Text
                              style={
                                [
                                  {
                                    "color": "#000",
                                    "fontSize": 20,
                                    "lineHeight": 26,
                                    "marginBottom": 16,
                                    "textAlign": "left",
                                  },
                                  {
                                    "fontWeight": "bold",
                                  },
                                ]
                              }
                            >
                              Name
                            </Text>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <TextInput
                                editable={true}
                                onChangeText={[Function]}
                                placeholder="Global PoP Meeting"
                                placeholderTextColor="#8E8E8E"
                                style={
                                  [
                                    {
                                      "color": "#000",
                                      "fontSize": 20,
                                      "lineHeight": 26,
                                      "marginBottom": 16,
                                      "textAlign": "left",
                                    },
                                    {
                                      "backgroundColor": "#fff",
                                      "borderColor": "#fff",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flex": 1,
                                      "padding": 8,
                                      "width": 50,
                                    },
                                  ]
                                }
                                testID="meeting_name_selector"
                                value="myMeeting"
                              />
                            </View>
                            <Text
                              style={
                                [
                                  {
                                    "color": "#000",
                                    "fontSize": 20,
                                    "lineHeight": 26,
                                    "marginBottom": 16,
                                    "textAlign": "left",
                                  },
                                  {
                                    "fontWeight": "bold",
                                  },
                                ]
                              }
                            >
                              Location
                            </Text>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <TextInput
                                editable={true}
                                onChangeText={[Function]}
                                placeholder="BC410"
                                placeholderTextColor="#8E8E8E"
                                style={
                                  [
                                    {
                                      "color": "#000",
                                      "fontSize": 20,
                                      "lineHeight": 26,
                                      "marginBottom": 16,
                                      "textAlign": "left",
                                    },
                                    {
                                      "backgroundColor": "#fff",
                                      "borderColor": "#fff",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flex": 1,
                                      "padding": 8,
                                      "width": 50,
                                    },
                                  ]
                                }
                                value=""
                              />
                            </View>
                            <Modal
                              hardwareAccelerated={false}
                              transparent={true}
                              visible={false}
                            />
                            <Modal
                              hardwareAccelerated={false}
                              onRequestClose={[Function]}
                              transparent={true}
                              visible={false}
                            />
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#fff",
                              "borderColor": "rgb(216, 216, 216)",
                              "borderTopWidth": 1,
                              "flexDirection": "row",
                              "justifyContent": "space-around",
                              "paddingHorizontal": 16,
                              "paddingVertical": 16,
                            }
                          }
                        >
                          <View
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "opacity": 1,
                              }
                            }
                          >
                            <View
                              style={
                                [
                                  {
                                    "backgroundColor": "#3742fa",
                                    "borderColor": "#3742fa",
                                    "borderRadius": 8,
                                    "borderWidth": 1,
                                    "padding": 8,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#000",
                                      "fontSize": 20,
                                      "lineHeight": 26,
                                      "textAlign": "left",
                                    },
                                    {
                                      "textAlign": "center",
                                    },
                                    {
                                      "color": "#fff",
                                    },
                                  ]
                                }
                              >
                                Create meeting
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
